# in-memory-db

./: hie.yaml  in-memory-db.cabal
app/: Main.hs
src/: Database.hs  Eval.hs  Parser.hs  Server.hs
